<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_application">Child\nRewards</string>
    <string name="child_1_name">Aneta</string>
    <string name="child_2_name">Bartek</string>
    <string name="child_3_name">Tomek</string>
    <string name="add_child_button">ADD CHILD</string>
    <string name="points_template">+5</string>
    <string name="child_s_name_hint">Child\'s name</string>
    <string name="repeat_hint">Repeat</string>
    <string name="assigned_to_header">Assigned to:</string>
    <string name="behaviour_radio_button_label">Behaviour</string>
    <string name="duties_radio_button_label">Duties</string>
    <string name="select_date">Select date</string>
</resources>